log
Fri 21 Mar 2025 03:03:22 AM UTC: 
 exercises.c | 44 ++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 40 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: too few arguments to function ‘pushFront’
   57 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
In file included from exercises.c:6:
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:11: error: too few arguments to function ‘pushFront’
   80 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
Compilation failed
3f6cb15
Fri 21 Mar 2025 03:03:25 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: too few arguments to function ‘pushFront’
   57 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
In file included from exercises.c:6:
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:11: error: too few arguments to function ‘pushFront’
   80 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
Compilation failed
d66bab6
Fri 21 Mar 2025 03:05:02 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:9: error: ‘Pilaaux’ may be used uninitialized [-Werror=maybe-uninitialized]
  103 |         push(Pilaaux, aux);
      |         ^~~~~~~~~~~~~~~~~~
exercises.c:98:12: note: ‘Pilaaux’ was declared here
   98 |     Stack* Pilaaux;
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
131c082
Fri 21 Mar 2025 03:10:07 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:9: error: ‘Pilaaux’ may be used uninitialized [-Werror=maybe-uninitialized]
  103 |         push(Pilaaux, aux);
      |         ^~~~~~~~~~~~~~~~~~
exercises.c:98:12: note: ‘Pilaaux’ was declared here
   98 |     Stack* Pilaaux;
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
77426cd
Fri 21 Mar 2025 02:23:05 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8c79cff
Fri 21 Mar 2025 02:33:44 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:18: error: ‘espacio’ may be used uninitialized [-Werror=maybe-uninitialized]
   49 |         *espacio = i;
      |         ~~~~~~~~~^~~
exercises.c:47:10: note: ‘espacio’ was declared here
   47 |     int* espacio;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6854d5
Fri 21 Mar 2025 02:52:39 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
cf00a3d
Fri 21 Mar 2025 02:55:07 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
4e06b7f
Fri 21 Mar 2025 02:57:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:92:15: error: too few arguments to function ‘pushCurrent’
   92 |         aux = pushCurrent(Lista);
      |               ^~~~~~~~~~~
In file included from exercises.c:6:
arraylist.h:23:6: note: declared here
   23 | void pushCurrent(List *L, void *dato);
      |      ^~~~~~~~~~~
Compilation failed
df877f4
Fri 21 Mar 2025 02:58:26 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
c791cf7
Fri 21 Mar 2025 03:06:11 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:95:34: error: expected ‘;’ before ‘}’ token
   95 |         } else {aux = next(Lista)};
      |                                  ^
      |                                  ;
Compilation failed
8fd555b
Fri 21 Mar 2025 03:06:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90bd7be
Fri 21 Mar 2025 03:09:23 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
b09179b
Fri 21 Mar 2025 03:12:12 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
139672d
Fri 21 Mar 2025 10:49:50 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
2d7a15a
Fri 21 Mar 2025 10:53:48 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
11c79d3
Fri 21 Mar 2025 10:56:08 PM UTC: 
 exercises.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  0|0
2399f13
Fri 21 Mar 2025 11:02:44 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
dc5de98
Fri 21 Mar 2025 11:06:43 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f11ddaf
Fri 21 Mar 2025 11:10:00 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘test_crea_lista’:
test.c:61:15: error: implicit declaration of function ‘crea_lista’; did you mean ‘create_list’? [-Werror=implicit-function-declaration]
   61 |     List* L = crea_lista();
      |               ^~~~~~~~~~
      |               create_list
test.c:61:15: error: initialization of ‘List *’ {aka ‘struct List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
fa905d0
Fri 21 Mar 2025 11:14:14 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:19: error: ‘auxiliar’ may be used uninitialized [-Werror=maybe-uninitialized]
   49 |         *auxiliar = i;
      |         ~~~~~~~~~~^~~
exercises.c:46:10: note: ‘auxiliar’ was declared here
   46 |     int* auxiliar;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c9c0a72
Fri 21 Mar 2025 11:14:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3195619
Fri 21 Mar 2025 11:23:41 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:10: error: unused variable ‘auxiliar’ [-Werror=unused-variable]
   46 |     int* auxiliar;
      |          ^~~~~~~~
exercises.c: In function ‘copia_pila’:
exercises.c:104:45: error: invalid application of ‘sizeof’ to incomplete type ‘Stack’ {aka ‘List’}
  104 |     Stack* Pilaaux = (Stack*) malloc(sizeof(Stack));
      |                                             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
02cd771
Fri 21 Mar 2025 11:25:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:45: error: invalid application of ‘sizeof’ to incomplete type ‘Stack’ {aka ‘List’}
  104 |     Stack* Pilaaux = (Stack*) malloc(sizeof(Stack));
      |                                             ^~~~~
Compilation failed
3168ba3
Fri 21 Mar 2025 11:26:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:109:9: error: ‘Pilaaux’ may be used uninitialized [-Werror=maybe-uninitialized]
  109 |         push(Pilaaux, aux);
      |         ^~~~~~~~~~~~~~~~~~
exercises.c:104:12: note: ‘Pilaaux’ was declared here
  104 |     Stack* Pilaaux;
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bddbaf3
Fri 21 Mar 2025 11:31:48 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
5819184
Sat 22 Mar 2025 09:55:59 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|1
total_score: 50/70
feadb37
Sat 22 Mar 2025 10:04:46 PM UTC: 
 exercises.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
 tests:  9|0
total_score: 70/70
e71f50b
